tests/shouldFail/j067c.c
volatile int f();

int main(void){

}
